<resources>
    <string name="app_name">Appointment Book</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="launch_calculator">Launch Calculator</string>
    <string name="add">+</string>
    <string name="plus">plus</string>
    <string name="equals">=</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="owner">Owner:</string>
    <string name="description">Description:</string>
    <string name="ex_12_25_2020">ex. 12/25/2020</string>
    <string name="_12_33">ex. 12:33</string>
    <string name="am_pm">am/pm</string>
    <string name="submit">Submit</string>
    <string name="return_to_main">return to main</string>
    <string name="who_s_appointment_book_would_you_like_to_display">Who\'s appointment book would you like to display?</string>
    <string name="search_appointments">Search Appointments</string>
    <string name="display_book">Display Book</string>
    <string name="readme">README</string>
    <string name="_3_5_2021">ex. 3/5/2021</string>
    <string name="_9_06">ex. 9:06</string>
</resources>