<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notebook"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


   <!-- <LinearLayout
        android:layout_width="246dp"
        android:layout_height="304dp"
        android:background="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522">
-->

    <Button
        android:id="@+id/launch_add_appointment"
        android:layout_width="165dp"
        android:layout_height="61dp"
        android:background="@drawable/round_button"
        android:text="@string/add_appointment"
        app:backgroundTint="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325"

        />

    <Button
        android:id="@+id/launch_display"
        android:layout_width="165dp"
        android:layout_height="61dp"
        android:background="@drawable/round_button"
        android:text="@string/display_book"
        app:backgroundTint="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <Button
        android:id="@+id/launch_search_appointments"
        android:layout_width="165dp"
        android:layout_height="61dp"
        android:background="@drawable/round_button"
        android:text="@string/search_appointments"
        app:backgroundTint="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="238dp"
        android:layout_height="73dp"
        android:text="For your Appointments:)"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="26dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />
    <!--  </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>